--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,7 +19,8 @@
 }
 
 body{
-    background-color: rgb(72, 255, 0);
+    background-color: rgb(240, 240, 240);
+    display: grid;
   }
 
 h1{
@@ -48,6 +49,10 @@ h4{
     text-align: center;
 }
 
+p{
+    color: #272727;
+}
+
 /*----- HEADER*/
 
 .header{
@@ -60,7 +65,7 @@ h4{
     justify-content: space-evenly;
 
     
-    height:10vh;
+    height:15vh;
     padding:10px 20px;
     align-items: center;
     justify-content: space-between;
@@ -92,7 +97,9 @@ h4{
 
 main{
     background-color: cyan;
+    height:auto;
     padding: 10px;
+
     .secIndexPrincipal{
 
         background-color: coral;
@@ -107,7 +114,7 @@ main{
         margin: 0 auto;
         width: 80%;
         .galeriaDestacados{
-            background-color: red;
+            background-color: rgb(98, 98, 98);
             
             display: flex;
             flex-flow: row wrap;
@@ -117,8 +124,10 @@ main{
 
 
          .tarjetaDestacados{
-            background-color: seagreen;
+            background-color: rgb(197, 197, 197);
             width:250px;
+            margin-top:10px;
+            margin-bottom: 10px ;
 
             display: inline-block;
 
@@ -146,6 +155,7 @@ main{
     text-align: center;
     .galeriaClientes{
        background-color: pink;
+       background-image:url(../assets/Patron_1.png);
         padding:50px;
         margin:0 auto;
         width: 60%;
@@ -173,14 +183,38 @@ main{
     grid-gap: 10px;
     gap: 10px;
     background-color: purple;
+    height:auto;
+    padding:10px;
+
+
+.contDescuentoEmail{
+    background-color: yellow;
+    grid-column: 1 / 4;
+
+
+}
 
 .descuentoEmail{
 
-    background-color: yellow;
-    grid-column: 1 / 4;
-    place-items: center;
-    align-items: center;
+width:400;
+place-items: center;
+align-items: center;
+
+
 }
+.descuentoEmail label
+{
+   
+    margin: 5px;
+    text-align: center;
+
+    display: flex;
+    flex-direction:column;
+    justify-content: flex-start;
+      
+}
+
+
     .logoFooter{
 
         background-color: yellowgreen;
@@ -194,12 +228,13 @@ main{
     }
 
     .whoss{
-        background-color: blue;
+        background-color: rgb(206, 206, 206);
         grid-column: 2 / 3;
         grid-row:2/4;
         place-items: center;
         ul{
         list-style: none;
+        text-align: center;
         }
 
     }
@@ -212,8 +247,8 @@ main{
     }
 
     .redesSociales{
-        background-color: rgb(0, 71, 0);
-
+      /*  background-color: rgb(0, 71, 0);
+*/
         grid-column: 3 / 4;
         grid-row: 3/4;
         place-items: center;
@@ -232,8 +267,7 @@ main{
     }
 
     #creditos{
-        background-color: sienna;
-
+        background-color: rgb(187, 255, 0);
         grid-column: 1 / 4;
         text-align: center;
 
@@ -262,3 +296,39 @@ main{
 .regresaArriba:hover {
     background-color: #0056b3;
 }
+
+/* ------------------------- CONTACTO*/
+
+.formularioContacto {
+     background-color: #fff;
+     padding: 20px;
+     margin: 0 auto;
+     
+     border-radius: 5px;
+     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+     width: 400px;
+     }
+     
+     .formularioContacto h2 {
+        margin-bottom: 20px;
+     }
+     .formularioContacto label {
+        display: block;
+        margin-bottom: 5px;
+    }
+     .formularioContacto input, .formularioContacto textarea {
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 3px;
+     }
+     
+     .formularioContacto button {
+        background-color: #007bff;
+        color: white;
+        padding: 10px;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+     }
